# discord-rag-bot

./: .env.example  .gitignore  Makefile  README.md  TODO.md  db.py  docker-compose.yml  embedding.py  hello.py  main.py  populate_db.py  pyproject.toml
docs/: ai_engineer_roadmap.md
tests/: test_bot.py
