[project]
name = "discord-rag-bot"
version = "0.1.0"
description = "Discord AI chatbot using Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
select = [
    "SIM",
    "I",
]