[project]
name = "discord-rag-bot"
version = "0.1.0"
description = "Discord AI chatbot using Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501", "SIM", "I"]